[tool.poetry]
name = "railway-route-generator"
version = "3.0.0"
description = ""
repository="https://github.com/simulate-digital-rail/railway-route-generator"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
packages = [{include = "railwayroutegenerator"}]

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/bp2022-ap1/yaramo", branch="refactor/replace-connected-nodes-with-edges"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
planpro-importer = {git = "https://github.com/bp2022-ap1/planpro-importer", branch="refactor/replace-connected-nodes-edges"}
orm-importer = {git = "https://github.com/bp2022-ap1/orm-importer", branch="refactor/replace-connected-nodes-edges"}
pylint = "^2.15.10"
black = "^22.12.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
